# check-jsonschemas

./: .pre-commit-hooks.yaml  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
pre_commit_hooks/: check_json_schemas.py
tests/: check_json_schemas_test.py  conftest.py
tests/fixtures/invalid-schemas/: draft-03.json  draft-04.json  draft-06.json  draft-07.json  draft-201909.json  draft-202012.json  without-schema-entry.json
tests/fixtures/valid-schemas/: draft-03.json  draft-04.json  draft-06.json  draft-07.json  draft-201909.json  draft-202012.json
