[metadata]
name = check-jsonschemas
version = 0.1.0
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md


[options]
packages = find:
install_requires =
    fastjsonschema >= 2.17.1

python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-json-schemas = pre_commit_hooks.check_json_schemas:main